# kaggle_personality

./: .gitignore  README.md  database.py  logistic_classifier.ipynb  main.py  model.py  pyproject.toml  schema.py  security.py  test.ipynb  test_main.py  train.py
artifacts/: pipeline.pkl
data/: personality_dataset_transformed.csv
